podział na articles z h1/h2; przyszłościowo klasa na subpage-lead i subpage-content; trochę contentu

--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     />
-    <!-- unused font -->
+    <!-- title font -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">MieszkAnka</h1>
+      <p class="title">MieszkAnka</p>
       <nav>
         <button><a href="#">Strona główna</a></button>
         <button>
@@ -47,8 +47,10 @@
         niepraktykujących i w końcu przenieść się na swoje - może nie być lekko.
         A czy warto? Jeszcze nie wiem, zobaczymy.
       </p>
+    </section>
+    <section>
+      <h1>Sprawdź, czego możesz się tu spodziewać</h1>
       <article>
-        <h1>Sprawdź, czego możesz się tu spodziewać</h1>
         <h2>O czym jest ta strona?</h2>
         <p>
           Kupujemy pierwsze mieszkanie od dewelopera i świetnie się bawimy.
@@ -57,6 +59,8 @@
           trzeba sobie jakoś z nią poradzić. Jak? Nikt nas tego nie nauczył.
           Więc uczymy się sami – na błędach swoich i cudzych.
         </p>
+      </article>
+      <article>
         <h2>Kim jestem?</h2>
         <p>
           <!-- sup daje dziwnie duży rozmiar fontu-->
@@ -68,17 +72,31 @@
           potem podzieliła się nią z innymi. Może komuś się przyda.
         </p>
       </article>
-      <article>
-        <h2>Aktualizacje – na jakim etapie jesteśmy?</h2>
-        <p>
-          <strong>Stan na: sierpień 2025</strong><br />Mieszkanie jest już
-          kupione, kredyt się spłaca. Wykończenie w toku: mamy położone gładzie
-          i wylewki, ale panele i kafelki czekają na swoją kolej. Podobnie jak
-          armatura do łazienki i zmiękczacz wody. Najnowsze osiągnięcie to
-          grzejnik kanałowy w końcu na swoim miejscu. Co prawda jeszcze nie
-          grzeje, ale patrzyliście na datę? Jest sierpień.
-        </p>
-      </article>
+    </section>
+      <section>
+        <h1>Aktualizacje – na jakim etapie jesteśmy?</h1>
+        <article>
+          <h2>Stan na: sierpień 2025</h2>
+          <p>
+            Mieszkanie jest już kupione, kredyt się spłaca. Wykończenie w toku:
+            mamy położone gładzie i wylewki, ale panele i kafelki czekają na
+            swoją kolej. Podobnie jak armatura do łazienki i zmiękczacz wody.
+            Najnowsze osiągnięcie to grzejnik kanałowy w końcu na swoim miejscu.
+            Co prawda jeszcze nie grzeje, ale patrzyliście na datę? Jest
+            sierpień. Poszliśmy w końcu do Enei zadać sakramentalne pytanie.
+            Okazało się, że jednak chcą, żeby im płacić. No cóż.
+          </p>
+        </article>
+        <article>
+          <h2>Stan na: lipiec 2025</h2>
+          <p>
+            Mamy już prąd, ale za niego nie płacimy. Nadal się waham, czy iść do
+            Enei zapytać, czy chcą moje pieniądze. Poza tym dużo się nie
+            zmieniło - ten miesiąc obfitował w ważniejsze sprawy, na przykład
+            urlop.
+          </p>
+        </article>
+      </section>
     </section>
   </body>
 </html>
