--- a/current-idea/sprawy-budowlane.html
+++ b/current-idea/sprawy-budowlane.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     />
-    <!-- unused font -->
+    <!-- title font -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">MieszkAnka</h1>
+      <p class="title">MieszkAnka</p>
       <nav>
         <button><a href="./index.html">Strona główna</a></button>
         <button>
@@ -40,11 +40,24 @@
         <button><a href="#">Sprawy budowlane</a></button>
       </nav>
     </header>
-    <section id="sprawy-budowlane">
+    <section class="subpage-lead">
       <h1>Sprawy budowlane</h1>
+      <p>
+        Jak się zabrać do wykańczania? Umowa z majstrem/firmą, gdzie kupować
+        materiały, kolejność prac, jak zapanować nad kolejnością, żeby nie
+        marnować czasu pomiędzy (np. czekając na materiały). Tutaj wzór umowy z
+        majstrem?! (maybe do pobrania)
+      </p>
+    </section>
+    <section class="subpage-content">
       <article>
-        <h2>Co tu znajdziesz?</h2>
-        <p>Chłopie, ja nie wiem</p>
+        <h1>Odbiór mieszkania z ekspertem</h1>
+        <p>
+          Dla mnie ściana wygląda na prostą. Dla poziomicy na trochę mniej
+          prostą, a dla inżyniera z poziomicą laserową jest totalnie krzywa.
+          Dlatego może warto zapłacić komuś za towarzystwo przy odbiorze
+          technicznym.
+        </p>
         <div class="album">
           <picture class="album">
             <img
@@ -57,7 +70,7 @@
         </div>
       </article>
       <article>
-        <h2>Kolejność wykańczania</h2>
+        <h1>Kolejność wykańczania</h1>
         <ol>
           <li>Najpierw to, co niezbędne do wprowadzenia się:</li>
           <ul>
