--- a/current-idea/sprawy-koncepcyjne.html
+++ b/current-idea/sprawy-koncepcyjne.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     />
-    <!-- unused font -->
+    <!-- title font -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">MieszkAnka</h1>
+      <p class="title">MieszkAnka</p>
       <nav>
         <button><a href="./index.html">Strona główna</a></button>
         <button>
@@ -40,10 +40,17 @@
         <button><a href="./sprawy-budowlane.html">Sprawy budowlane</a></button>
       </nav>
     </header>
-    <section id="sprawy-koncepcyjne">
+    <section class="subpage-lead">
       <h1>Sprawy koncepcyjne</h1>
+      <p>
+        Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na drzwi otwarte.
+        Poczujesz się bogato i poznasz bardziej kumatych ludzi. Zdecyduj, czy
+        wtórny, czy pierwotny rynek.
+      </p>
+    </section>
+    <section class="subpage-content">
       <article>
-        <h2>Zanim cokolwiek</h2>
+        <h1>Zanim cokolwiek</h1>
         <p>
           Najpierw pomyśleć, potem robić. Nad czym warto się zastanowić 20 razy?
         </p>
@@ -69,29 +76,54 @@
         </ul>
       </article>
       <article>
-        <h2>Co tu znajdziesz?</h2>
-        <p>
-          Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na drzwi
-          otwarte. Poczujesz się bogato i poznasz bardziej kumatych ludzi.
-          Zdecyduj, czy wtórny, czy pierwotny rynek.
-        </p>
-      </article>
-      <article>
-        <h2>Etap spokojnego rozglądania się</h2>
+        <h1>Etap spokojnego rozglądania się</h1>
         <p>
           Na ten etap prawdopodobnie poświęcisz najwięcej czasu – i słusznie.
           Mieszkanie to spora inwestycja, nawet jeśli Twój stan konta jest
           powyżej przeciętnego, dlatego dobrze go naprawdę porządnie przemyśleć
           i dać sobie czas na ewentualne zmiany zdania. Zatem co musisz zrobić?
+          <br />
+          kredyt: po prostu idź do doradcy. serio.i nie rezygnuj z wakacji
         </p>
-        <h3>Rozeznanie miast i dzielnic</h3>
+        <h2>Rozeznanie miast i dzielnic</h2>
         <p>
           Moim zdaniem to pierwsze, co warto zrobić. Zanim zaczniesz szukać
           konkretnych deweloperów, dostępnych mieszkań i ofert – zastanów się,
-          gdzie w ogóle chcesz mieszkać.</p>
-          <ul><li>Jeśli marzy Ci się zmienić miasto zamieszkania – jasne, ahoj przygodo! Ale wynajmij sobie tam pokój na miesiąc i spróbuj pożyć jak lokals. Jak działa komunikacja miejska? Czy odpowiada Ci atmosfera miasta? Czy wielkość miasta jest dla Ciebie odpowiednia, tak na co dzień? To wszystko może wyglądać zupełnie inaczej z perspektywy turysty, dlatego spróbuj pożyć chwilę jak tutejszy zanim się nim staniesz na dobre.</li>
-            <li>Jeśli decydujesz się na Twoje obecne miasto – to część drogi masz już za sobą. Zakładam, że dobrze Ci się w nim żyje, skoro chcesz tu zostać. Ale nadal do wyboru pozostaje np. dzielnica albo nawet samo osiedle. Weź pod uwagę nie tylko swoje obecne potrzeby, ale także to, co może się przydać za kilka lat (tak, mówię o lekarzach w pobliżu).</li>
-          </ul>
+          gdzie w ogóle chcesz mieszkać.
+        </p>
+        <ul>
+          <li>
+            Jeśli marzy Ci się zmienić miasto zamieszkania – jasne, ahoj
+            przygodo! Ale wynajmij sobie tam pokój na miesiąc i spróbuj pożyć
+            jak lokals. Jak działa komunikacja miejska? Czy odpowiada Ci
+            atmosfera miasta? Czy wielkość miasta jest dla Ciebie odpowiednia,
+            tak na co dzień? To wszystko może wyglądać zupełnie inaczej z
+            perspektywy turysty, dlatego spróbuj pożyć chwilę jak tutejszy zanim
+            się nim staniesz na dobre.
+          </li>
+          <li>
+            Jeśli decydujesz się na Twoje obecne miasto – to część drogi masz
+            już za sobą. Zakładam, że dobrze Ci się w nim żyje, skoro chcesz tu
+            zostać. Ale nadal do wyboru pozostaje np. dzielnica albo nawet samo
+            osiedle. Weź pod uwagę nie tylko swoje obecne potrzeby, ale także
+            to, co może się przydać za kilka lat (tak, mówię o lekarzach w
+            pobliżu).
+          </li>
+        </ul>
+      </article>
+      <article>
+        <h1>Etap określania wymagań</h1>
+        <p>
+          Po rozeznaniu - zdecyduj, czego chcesz. Określ swoje must-have,
+          nice-to-have, a także never-ever-in-my-life-to-have.
+        </p>
+      </article>
+      <article>
+        <h1>Etap podejmowania decyzji</h1>
+        <p>
+          Na podstawie zasad, które spiszesz - popatrz na konkrety. Przejrzyj
+          oferty, wybierz kilka najbardziej Ci odpowiadających... Decyzja będzie
+          dużo łatwiejsza.
         </p>
       </article>
     </section>
