--- a/current-idea/sprawy-projektowe.html
+++ b/current-idea/sprawy-projektowe.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     />
-    <!-- unused font -->
+    <!-- title font -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header>
-      <h1 class="title">MieszkAnka</h1>
+      <p class="title">MieszkAnka</p>
       <nav>
         <button><a href="./index.html">Strona główna</a></button>
         <button>
@@ -40,10 +40,17 @@
         <button><a href="./sprawy-budowlane.html">Sprawy budowlane</a></button>
       </nav>
     </header>
-    <section id="sprawy-projektowe">
+    <section class="subpage-lead">
       <h1>Sprawy projektowe</h1>
+      <p>
+        stolarz vs Ikea; - zdjęcia/obrazy??? może np. kiepskie floor plany i jak
+        je poprawić? / - cały dział projektowanie: czego w ogóle chcesz od tego
+        mieszkania? - tricki architektoniczne, typu kolorowy sufit, ukryte drzwi
+      </p>
+    </section>
+    <section class="subpage-content">
       <article>
-        <h2>Co tu znajdziesz?</h2>
+        <h1>Architekt czy nie?</h1>
         <p>
           Czy chcesz architekta? Nie musisz, da się bez. Szczególnie, gdy masz
           chłopaka prawie architekta. Ale fajne są usługi sprawdzenia własnego
@@ -52,10 +59,21 @@
             >Jeśli nie masz dobrego fachowca, to lepiej mieć architekta</strong
           >. Zbieraj faktury, podpisuj umowy itd.
         </p>
+      </article>
+      <article>
+        <h1>Twoje założenia do projektu</h1>
         <p>
-          Nie interesują Cię trendy, ale to, jak żyjesz na co dzień. Co Cię
-          denerwuje? Jakie masz plany?
+          "Twoje" to słowo-klucz. Nie interesują Cię trendy, ale to, jak żyjesz
+          na co dzień. Co Cię denerwuje? Jakie masz plany?
         </p>
+      </article>
+      <article>
+        <h1>Nasze doświadczenia: trust the process</h1>
+        <p>
+          Ku pokrzepieniu serc, kilka kolaży z samodzielnie dobranymi
+          materiałami.
+        </p>
+
         <div class="album">
           <!-- class idzie do picture czy do img??? -->
           <picture class="album">
