notes, hr after article as css style, .tiles class (tbc), .updates class

--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -41,7 +41,7 @@
       </nav>
     </header>
     <section>
-      <p style="background-color: #ded5d5; padding: 12px; font-style: italic">
+      <p style="margin-left: 25%; margin-top: 4%; padding: 12px; font-style: italic">
         Lubisz mieć dach nad głową? Jasne, to dość popularne hobby. Wszyscy
         chcemy być domni. Jeśli planujesz opuścić grono wierzących
         niepraktykujących i w końcu przenieść się na swoje - może nie być lekko.
@@ -73,7 +73,7 @@
         </p>
       </article>
     </section>
-      <section>
+      <section class="updates">
         <h1>Aktualizacje – na jakim etapie jesteśmy?</h1>
         <article>
           <h2>Stan na: sierpień 2025</h2>
