--- a/current-idea/sprawy-papierkowe.html
+++ b/current-idea/sprawy-papierkowe.html
@@ -77,19 +77,31 @@
       <article>
         <h1>Do załatwienia z dostawcami mediów</h1>
         <p>prąd, woda, gaz, internet, telewizja - co kto lubi</p>
-        <h2>Prąd</h2>
-        <p>IMZU, umowa z dystrybutorem, stawki, podłączenie licznika</p>
-        <h2>Woda</h2>
-        <p>najpewniej wspólnota/zarządca</p>
-        <h2>Ogrzewanie</h2>
-        <p>najpewniej wspólnota/zarządca</p>
-        <h2>Gaz - jeśli jest!</h2>
-        <p>najpewniej wspólnota/zarządca</p>
-        <h2>Internet i telewizja</h2>
-        <p>
-          poczekaj i zobacz, czy nie ma przedstawiciela dzielnicy/obszaru danych
-          dostawców/firm
-        </p>
+        <div class="tiles">
+          <div>
+            <h2>Prąd</h2>
+            <p>IMZU, umowa z dystrybutorem, stawki, podłączenie licznika</p>
+          </div>
+          <div>
+            <h2>Woda</h2>
+            <p>najpewniej wspólnota/zarządca</p>
+          </div>
+          <div>
+            <h2>Ogrzewanie</h2>
+            <p>najpewniej wspólnota/zarządca</p>
+          </div>
+          <div>
+            <h2>Gaz - jeśli jest!</h2>
+            <p>najpewniej wspólnota/zarządca</p>
+          </div>
+          <div>
+            <h2>Internet i telewizja</h2>
+            <p>
+              poczekaj i zobacz, czy nie ma przedstawiciela dzielnicy/obszaru
+              danych dostawców/firm
+            </p>
+          </div>
+        </div>
       </article>
       <article>
         <h1>Bonus nr 2: wspólnota mieszkaniowa lub zarządca</h1>
