--- a/current-idea/sprawy-koncepcyjne.html
+++ b/current-idea/sprawy-koncepcyjne.html
@@ -128,4 +128,14 @@
       </article>
     </section>
   </body>
+  <footer>
+    <p>
+      2025 @ amk
+      <br />
+      Tworzę tę stronę w ramach nauki web developmentu (i przy okazji
+      wyładowania frustracji związanej z zakupem mieszkania). Nie odpowiadam za
+      błędne decyzje życiowe, które podejmiesz na podstawie zamieszczonych tu
+      treści.
+    </p>
+  </footer>
 </html>
