--- a/current-idea/index.html
+++ b/current-idea/index.html
@@ -103,7 +103,7 @@
     <p>
       2025 @ amk
       <br>
-      Tworzę tę stronę w ramach nauki web developmentu (i przy okazji wyładowania frustracji związanej z zakupem mieszkania). Nie odpowiadam za błędne decyzje życiowe, które podejmiesz na podstawie zamieszczonych tu treści.
+      Tworzę tę stronę w ramach nauki web developmentu (i przy okazji wyładowania frustracji związanej z zakupem mieszkania). Znajdziesz ją też na moim <a href="https://github.com/annopodobna" target="_blank">GitHubie</a>. Nie odpowiadam za błędne decyzje życiowe, które podejmiesz na podstawie zamieszczonych tu treści.
     </p>
   </footer>
 </html>
