--- a/current-idea/htmx-elements/header.html
+++ b/current-idea/htmx-elements/header.html
@@ -1,6 +1,6 @@
 <p class="title">MieszkAnka</p>
 <nav>
-  <button><a href="#">Strona główna</a></button>
+  <button><a href="./index.html">Strona główna</a></button>
   <button>
     <a href="./sprawy-koncepcyjne.html">Sprawy koncepcyjne</a>
   </button>
