--- a/current-idea/sprawy-budowlane.html
+++ b/current-idea/sprawy-budowlane.html
@@ -4,6 +4,8 @@
     <title>Sprawy budowlane – MieszkAnka</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- paragraph + h1-h2 font -->
@@ -24,22 +26,7 @@
     <meta name="author" content="amk" />
   </head>
   <body>
-    <header>
-      <p class="title">MieszkAnka</p>
-      <nav>
-        <button><a href="./index.html">Strona główna</a></button>
-        <button>
-          <a href="./sprawy-koncepcyjne.html">Sprawy koncepcyjne</a>
-        </button>
-        <button>
-          <a href="./sprawy-papierkowe.html">Sprawy papierkowe</a>
-        </button>
-        <button>
-          <a href="./sprawy-projektowe.html">Sprawy projektowe</a>
-        </button>
-        <button><a href="#">Sprawy budowlane</a></button>
-      </nav>
-    </header>
+    <header hx-get="htmx-elements/header.html" hx-trigger="load"></header>
     <section class="subpage-lead">
       <h1>Sprawy budowlane</h1>
       <p>
@@ -98,16 +85,5 @@
       </article>
     </section>
   </body>
-  <footer>
-    <p>
-      2025 @ amk
-      <br />
-      Tworzę tę stronę w ramach nauki web developmentu (i przy okazji
-      wyładowania frustracji związanej z zakupem mieszkania). Znajdziesz ją też
-      na moim
-      <a href="https://github.com/annopodobna" target="_blank">GitHubie</a>. Nie
-      odpowiadam za błędne decyzje życiowe, które podejmiesz na podstawie
-      zamieszczonych tu treści. treści.
-    </p>
-  </footer>
+  <footer hx-get="htmx-elements/footer.html" hx-trigger="load"></footer>
 </html>
