--- a/current-idea/sprawy-koncepcyjne.html
+++ b/current-idea/sprawy-koncepcyjne.html
@@ -30,9 +30,13 @@
     <section class="subpage-lead">
       <h1>Sprawy koncepcyjne</h1>
       <p>
-        Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na drzwi otwarte.
-        Poczujesz się bogato i poznasz bardziej kumatych ludzi. Zdecyduj, czy
-        wtórny, czy pierwotny rynek.
+        Trochę window shoppingu jeszcze nikomu nie zaszkodziło, szczególnie
+        jeśli zaraz masz wydać kilkaset tysięcy. Dlatego dobrze poświęcić więcej
+        czasu na ten etap. Może nie kilka lat, bo ceny mieszkań niestety nadal
+        rosną – ale na pewno nie rzucaj się na pierwszą ofertę bez
+        przygotowania. Rozeznanie dzielnic, wielkości, cen, deweloperow, idź na
+        drzwi otwarte. Poczujesz się bogato i poznasz bardziej kumatych ludzi.
+        Zdecyduj, czy wtórny, czy pierwotny rynek.
       </p>
     </section>
     <section class="subpage-content">
@@ -40,6 +44,7 @@
         <h1>Zanim cokolwiek</h1>
         <p>
           Najpierw pomyśleć, potem robić. Nad czym warto się zastanowić 20 razy?
+          Zadaj sobie te pytania i odpowiedz na spokojnie.
         </p>
         <ul>
           <li>
@@ -51,8 +56,17 @@
             chcę jeszcze sprawdzić różne miejsca?
           </li>
           <li>
+            Wolę kupić z rynku wtórnego czy z pierwotnego? Czyli: bardziej
+            zależy mi na gotowym mieszkaniu do wprowadzenia od razu czy na
+            zrobieniu wszystkiego po swojemu od podstaw?<br /><strong
+              >Important note: na tej stronie opisuję perspektywę zakupu z rynku
+              pierwotnego, bezpośrednio od dewelopera.</strong
+            >
+          </li>
+          <li>
             Czy ogarnę to finansowo (to, czyli albo gotówkę na zakup mieszkania,
-            albo kredyt)?
+            albo kredyt)? Jaki mam budżet? Nie tylko na sam zakup, ale i na
+            wykończenie!
           </li>
           <li>
             Jeśli masz partnerkę lub partnera: jak to zrobimy? Czy kupujemy
@@ -63,7 +77,7 @@
         </ul>
       </article>
       <article>
-        <h1>Etap spokojnego rozglądania się</h1>
+        <h1>1. Etap spokojnego rozglądania się</h1>
         <p>
           Na ten etap prawdopodobnie poświęcisz najwięcej czasu – i słusznie.
           Mieszkanie to spora inwestycja, nawet jeśli Twój stan konta jest
@@ -72,45 +86,127 @@
           <br />
           kredyt: po prostu idź do doradcy. serio.i nie rezygnuj z wakacji
         </p>
-        <h2>Rozeznanie miast i dzielnic</h2>
-        <p>
-          Moim zdaniem to pierwsze, co warto zrobić. Zanim zaczniesz szukać
-          konkretnych deweloperów, dostępnych mieszkań i ofert – zastanów się,
-          gdzie w ogóle chcesz mieszkać.
-        </p>
-        <ul>
-          <li>
-            Jeśli marzy Ci się zmienić miasto zamieszkania – jasne, ahoj
-            przygodo! Ale wynajmij sobie tam pokój na miesiąc i spróbuj pożyć
-            jak lokals. Jak działa komunikacja miejska? Czy odpowiada Ci
-            atmosfera miasta? Czy wielkość miasta jest dla Ciebie odpowiednia,
-            tak na co dzień? To wszystko może wyglądać zupełnie inaczej z
-            perspektywy turysty, dlatego spróbuj pożyć chwilę jak tutejszy zanim
-            się nim staniesz na dobre.
-          </li>
-          <li>
-            Jeśli decydujesz się na Twoje obecne miasto – to część drogi masz
-            już za sobą. Zakładam, że dobrze Ci się w nim żyje, skoro chcesz tu
-            zostać. Ale nadal do wyboru pozostaje np. dzielnica albo nawet samo
-            osiedle. Weź pod uwagę nie tylko swoje obecne potrzeby, ale także
-            to, co może się przydać za kilka lat (tak, mówię o lekarzach w
-            pobliżu).
-          </li>
-        </ul>
+        <article>
+          <h2>Rozeznanie miast i dzielnic</h2>
+          <p>
+            Moim zdaniem to pierwsze, co warto zrobić. Zanim zaczniesz szukać
+            konkretnych deweloperów, dostępnych mieszkań i ofert – zastanów się,
+            gdzie w ogóle chcesz mieszkać.
+          </p>
+          <ul>
+            <li>
+              Jeśli marzy Ci się zmienić miasto zamieszkania – jasne, ahoj
+              przygodo! Ale wynajmij sobie tam pokój na miesiąc i spróbuj pożyć
+              jak lokals. Jak działa komunikacja miejska? Czy odpowiada Ci
+              atmosfera miasta? Czy wielkość miasta jest dla Ciebie odpowiednia,
+              tak na co dzień? To wszystko może wyglądać zupełnie inaczej z
+              perspektywy turysty, dlatego spróbuj pożyć chwilę jak tutejszy
+              zanim się nim staniesz na dobre.
+            </li>
+            <li>
+              Jeśli decydujesz się na Twoje obecne miasto – to część drogi masz
+              już za sobą. Zakładam, że dobrze Ci się w nim żyje, skoro chcesz
+              tu zostać. Ale nadal do wyboru pozostaje np. dzielnica albo nawet
+              samo osiedle. Weź pod uwagę nie tylko swoje obecne potrzeby, ale
+              także to, co może się przydać za kilka lat (tak, mówię o lekarzach
+              w pobliżu).
+            </li>
+          </ul>
+        </article>
+        <article>
+          <h2>Opinie o deweloperach</h2>
+          <p>
+            Na razie na spokojnie - sprawdź, jacy deweloperzy oferują mieszkania
+            w wybranej przez Ciebie okolicy. Czy dana firma jest godna zaufania,
+            ma za sobą jakieś skandale, problemy finansowe? A także: co piszą na
+            ich temat mieszkańcy, którzy już kupili swoją nieruchomość? Spróbuj
+            znaleźć grupy osiedlowe na Facebooku i przejrzeć problemy, którymi
+            dzielą się tam sąsiedzi albo podpytać kogoś bezpośrednio. Możesz
+            brać drobną poprawkę na ich komentarze, bo na pewno częściej będą
+            pisać o rzeczach negatywnych niż pozytywnych - ale z drugiej strony
+            to właśnie tych negatywnych chcesz uniknąć w swoim mieszkaniu.
+          </p>
+        </article>
+        <article>
+          <h2>Ceny na rynku</h2>
+          <p>
+            Jeśli znasz już mniej więcej swój budżet, to czas porównać go z
+            rzeczywistością. Zacznij od ogólnodostępnych źródeł, czyli ogłoszeń
+            na portalach typu OtoDom. Większość deweloperów niestety nie
+            publikuje cen wprost; trzeba o nie doptyać. Pro tip na tę
+            okoliczność: wysyłaj takie zapytania z odrębnego mejla, na którym
+            nie będzie Ci przeszkadzał późniejszy spam ofertami i newsletterami.
+          </p>
+          <p>
+            Głównie interesuje Cię cena za metr kwadratowy samego mieszkania.
+            Koniecznie upewnij się, jak dany deweloper liczy metraż: ze
+            ściankami działowymi włącznie czy bez. Dopytaj też o dodatki, na
+            których Ci zależy - na przykład miejsce parkingowe, balkon czy
+            komórkę lokatorską (po staropolsku: piwnicę).
+          </p>
+        </article>
+        <article>
+          <h2>Kredyt i doradca finansowy</h2>
+          <p>
+            Może nie jest to intuicyjnie "koncepcyjna" sprawa, ale w tej kwestii
+            też warto mieć wstępne rozeznanie. Jeśli nie potrzebujesz kredytu,
+            możesz oczywiście pominąć ten punkt (zazdro!).
+          </p>
+          <p>
+            Jeśli jednak trochę pożyczonej gotówki jest Ci potrzebne, masz dwie
+            drogi: możesz od razu iść do konkretnego banku albo spotkać się
+            najpierw z doradcą finansowym. Osobiście polecam to drugie
+            rozwiązanie, bo pokaże Ci więcej możliwość i oferty różnych banków -
+            ale doradcy również współpracują z konkretnymi bankami i niestety
+            mogą też mieć swoje preferencje (często bezpośrednio związane z
+            prowizją, jaką dostają od zawartej umowy). Zwykle usługa doradcy
+            finansowego jest za to darmowa; ich wynagrodzeniem jest właśnie ta
+            prowizja, którą wypłaca im bank za to, że weźmiesz ten konkretny
+            kredyt.
+          </p>
+          <p>
+            A czego się spodziewać na takich wstępnych rozmowach? Przede
+            wszystkim uda Ci się mniej więcej poznać swoją zdolność kredytową -
+            czyli to, ile pieniędzy bank jest skłonny Ci pożyczyć. Ta kwota może
+            być różna w każdym banku i zależy od wieeelu czynników, na przykład
+            Twoich zarobków (oczywiście), wieku (mniej oczywiście), rodzaju
+            umowy o pracę/działalności, obecnie spłacanych zobowiązań (inne
+            kredyty i pożyczki, zakupy na raty)... Przygotuj się na wiele pytań
+            o tego typu rzeczy, a także na prośbę o wyciąg z historii Twojego
+            głównego konta bankowego (żeby sprawdzić, jak godspodarujesz swoją
+            wypłatą na co dzień). Tak, będą tam widoczne tytuły przelewów.
+            Doradcy i pracownicy banków niejedno już widzieli, więc nie musisz
+            się stresować głupkowatymi przelewami do znajomych - ale na wszelki
+            wypadek w najbliższych miesiącach ogranicz żarty w tytułach
+            przelewów do bardziej niż mniej legalnych.
+          </p>
+        </article>
       </article>
       <article>
-        <h1>Etap określania wymagań</h1>
+        <h1>2. Etap określania wymagań</h1>
         <p>
-          Po rozeznaniu - zdecyduj, czego chcesz. Określ swoje must-have,
-          nice-to-have, a także never-ever-in-my-life-to-have.
+          Po rozeznaniu - zdecyduj, czego chcesz. Nie chodzi jeszcze o konkretne
+          mieszkanie, ale o jego cechy lub elementy, na których Ci zależy. W ten
+          sposób z morza ofert zalewających rynek wydzielisz grupkę tych, które
+          serio Cię interesują.
+        </p>
+        <p>
+          Pewnie jesteś już w stanie powiedzieć, w jakiej lokalizacji chcesz
+          mieszkać, a w jakiej za żadne skarby. Masz przedział wielkości
+          mieszkania i układu pokoi, na którym Ci zależy. Określ, a najlepiej
+          spisz sobie swoje must-have, nice-to-have, a także
+          avoid-at-all-costs-to-have. Taka podręczna notatka pomoże Ci utrzymać
+          kurs nawet przy najbardziej przekonywujących strategiach
+          marketingowych deweloperów.
         </p>
       </article>
       <article>
-        <h1>Etap podejmowania decyzji</h1>
+        <h1>3. Etap podejmowania decyzji</h1>
         <p>
-          Na podstawie zasad, które spiszesz - popatrz na konkrety. Przejrzyj
-          oferty, wybierz kilka najbardziej Ci odpowiadających... Decyzja będzie
-          dużo łatwiejsza.
+          I na koniec, na podstawie zasad, które spiszesz - popatrz na konkrety.
+          Przejrzyj oferty, wybierz kilka najbardziej Ci odpowiadających... To z
+          nimi chcesz porozmawiać i z nich wybierzez to jedno jedyne mieszkanie
+          dla Ciebie. Decyzja będzie dużo łatwiejsza.
         </p>
       </article>
     </section>
