--- a/current-idea/sprawy-papierkowe.html
+++ b/current-idea/sprawy-papierkowe.html
@@ -33,7 +33,9 @@
         Podatki i przepisy z dupy, czyli z czym do jakiego urzędu i o co chodzi
         notariuszowi. A także: skąd się bierze prąd, czyli z kim i co trzeba
         załatwić? Oraz: czy bank odmówi mi kredytu, jeśli w tytule przelewu do
-        kolegi wpiszę "hajs za narkotyki"?
+        kolegi wpiszę "hajs za narkotyki"? Spróbujemy przez to przejść po kolei,
+        od momentu, w którym decydujesz się na zakup tego konkretnego
+        mieszkania.
       </p>
     </section>
     <section class="subpage-content">
